--- a/themes/blist-hugo-theme/layouts/partials/head.html
+++ b/themes/blist-hugo-theme/layouts/partials/head.html
@@ -24,6 +24,7 @@
   {{- $styles := $styles| minify | fingerprint | resources.PostProcess -}}
   <link
     rel="stylesheet"
+    crossorigin="anonymous"
     href="{{ $styles.Permalink }}"
     integrity="{{ $styles.Data.Integrity }}"
   />
