--- a/themes/blist-hugo-theme/layouts/partials/education.html
+++ b/themes/blist-hugo-theme/layouts/partials/education.html
@@ -1,4 +1,5 @@
 
+{{ if .Site.education.enable }}
 <section class="section section--border-bottom rad-animation-group">
     <div class="container">
         <div class="row rad-fade-down">
@@ -21,4 +22,5 @@
         </div>
     </div>
 </section>
+{{ end }}
 
