--- a/themes/blist-hugo-theme/assets/css/site.css
+++ b/themes/blist-hugo-theme/assets/css/site.css
@@ -56,6 +56,8 @@ body {
 
 /* Ethan Added */
 
+/* Education */
+
 .education__date, .experience__date {
 	line-height: 1.57
 }
@@ -105,3 +107,29 @@ body {
 	z-index: 2;
 	position: relative
 }
+
+/* Section */
+
+.section--border-bottom::after {
+	content: '';
+	position: absolute;
+	left: 50%;
+	bottom: 0;
+	width: 100%;
+	height: 1px;
+	max-width: 1170px;
+	background-color: #dbe0e4;
+	-webkit-transform: translateX(-50%);
+	transform: translateX(-50%)
+}
+
+.section {
+	position: relative;
+	padding-top: 60px;
+	padding-bottom: 60px
+}
+
+/* Rad Animation Group */
+
+
+
