CsS Education Section

--- a/themes/blist-hugo-theme/layouts/partials/education.html
+++ b/themes/blist-hugo-theme/layouts/partials/education.html
@@ -4,14 +4,14 @@
     <div class="container">
         <div class="row rad-fade-down">
             <div class="col-12">
-                <h2>Education</h2>
+                <h2 class="text-4xl font-bold mb-4">Education</h2>
                 <div class="row pt-2 pt-md-4">
                     
 
                     <div class="col-12 col-sm-6 mb-4 mb-sm-0">
                         <div class="education">
                             <div class="education__date">2018-Present</div>
-                            <div class="education__title">Lancastery University, UK</div>
+                            <div class="education__title">Lancaster University, UK</div>
                             <div class="education__degree">
                                 First Class BSc Mathematics <br>
                                 MSc Statistics
