--- a/themes/blist-hugo-theme/assets/css/site.css
+++ b/themes/blist-hugo-theme/assets/css/site.css
@@ -56,6 +56,29 @@ body {
 
 /* Ethan Added */
 
+.flex-container{
+  display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-justify-content: space-around;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+
+
 /* Education */
 
 .education__date, .experience__date {
@@ -108,7 +131,6 @@ body {
 	position: relative
 }
 
-/* Section */
 
 .section--border-bottom::after {
 	content: '';
@@ -128,6 +150,8 @@ body {
 	padding-top: 60px;
 	padding-bottom: 60px
 }
+
+/* Section */
 
 .section .row.row--padded {
 	margin-top: 32px;
