Fix Education Style Final

--- a/themes/blist-hugo-theme/layouts/partials/education.html
+++ b/themes/blist-hugo-theme/layouts/partials/education.html
@@ -1,7 +1,7 @@
 
 
 <section class="section section--border-bottom rad-animation-group">
-    <div class="container max-w-screen-lg mx-auto px-6 py-12 grid md:grid-cols-2 gap-4 lg:gap-16 items-center">
+    <div class="container max-w-screen-lg mx-auto px-6 py-12 grid">
         <div class="row rad-fade-down">
             <div class="col-12">
                 <h2 class="text-4xl font-bold mb-4">Education</h2>
@@ -22,7 +22,7 @@
                     <div class="col-12 col-sm-6 mb-4 mb-sm-0">
                         <div class="education">
                             <div class="education__date">2016-2018</div>
-                            <div class="education__title">Christopher Whitehead Language College and Sixth Form</div>
+                            <div class="education__title">Christopher Whitehead Sixth Form</div>
                             <div class="education__degree">
                                 A Levels: Mathematics, Physics, Chemistry, Further Mathematics.
                             </div>
