Adjust wrapping for smaller screens

--- a/themes/blist-hugo-theme/layouts/partials/education.html
+++ b/themes/blist-hugo-theme/layouts/partials/education.html
@@ -6,7 +6,9 @@
             <div class="col-12">
                 <h2 class="text-4xl font-bold mb-4">Education</h2>
                 <div class="row pt-2 pt-md-4">
-                    
+                  
+                  
+                     <div class="container max-w-screen-lg mx-auto px-6 py-12 grid m :grid-cols-2 gap-4 lg:gap-16 items-center"> 
 
                     <div class="col-12 col-sm-6 mb-4 mb-sm-0">
                         <div class="education">
@@ -29,7 +31,7 @@
                         </div>
                     </div>
                     
-                    
+                </div>    
                     
                 </div>
             </div>
