Finx grid layout

--- a/themes/blist-hugo-theme/assets/css/site.css
+++ b/themes/blist-hugo-theme/assets/css/site.css
@@ -77,7 +77,10 @@ body {
     align-items: center;
 }
 
-
+.gird_container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
 
 /* Education */
 
