--- a/themes/blist-hugo-theme/layouts/partials/education.html
+++ b/themes/blist-hugo-theme/layouts/partials/education.html
@@ -8,9 +8,8 @@
                 <div class="row pt-2 pt-md-4">
                   
                   
-                     <div class="container max-w-screen-lg mx-auto px-6 py-12 grid m :grid-cols-2 gap-4 lg:gap-16 items-center"> 
+                     <div class="gird_container"> 
 
-                    <div class="col-12 col-sm-6 mb-4 mb-sm-0">
                         <div class="education">
                             <div class="education__date">2018-Present</div>
                             <div class="education__title">Lancaster University, UK</div>
@@ -19,9 +18,8 @@
                                 MSc Statistics
                             </div>
                         </div>
-                    </div>
                     
-                    <div class="col-12 col-sm-6 mb-4 mb-sm-0">
+
                         <div class="education">
                             <div class="education__date">2016-2018</div>
                             <div class="education__title">Christopher Whitehead Sixth Form</div>
@@ -29,7 +27,7 @@
                                 A Levels: Mathematics, Physics, Chemistry, Further Mathematics.
                             </div>
                         </div>
-                    </div>
+
                     
                 </div>    
                     
