--- a/themes/blist-hugo-theme/layouts/partials/education.html
+++ b/themes/blist-hugo-theme/layouts/partials/education.html
@@ -1,7 +1,7 @@
 
 
 <section class="section section--border-bottom rad-animation-group">
-    <div class="container max-w-screen-lg mx-auto px-6 py-12 grid">
+    <div class="container max-w-screen-lg mx-auto px-6 grid">
         <div class="row rad-fade-down">
             <div class="col-12">
                 <h2 class="text-4xl font-bold mb-4">Education</h2>
