--- a/themes/blist-hugo-theme/layouts/index.html
+++ b/themes/blist-hugo-theme/layouts/index.html
@@ -3,6 +3,8 @@
   
   {{- partial "education.html" . -}}
   
+  {{- partial "experience.html" . -}}
+  
   <div class="container p-6 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 lg:gap-8">
     {{ range first 6 (where .Site.RegularPages.ByDate.Reverse "Type" "project")  }}
       {{- partial "blog-card.html" . -}}
