--- a/themes/blist-hugo-theme/layouts/partials/experience.html
+++ b/themes/blist-hugo-theme/layouts/partials/experience.html
@@ -6,7 +6,7 @@
             <div class="col-12">
                 <h2 class="text-4xl font-bold mb-4">Experience</h2>
                   
-                     <div class="gird_container"> 
+                     <div class="gird_container_2"> 
 
                         <div class="education font-light text-lg">
 Having recently graduated with a First Class BSc in Mathematics, from Lancaster University, I am currently studying for a MSc in Statistics. I look forward to completing my masters course later this year and entering the world of employment. To see my previous work experience and extra curricular projects, check out my LinkedIn Profile.
