--- a/themes/blist-hugo-theme/layouts/partials/intro.html
+++ b/themes/blist-hugo-theme/layouts/partials/intro.html
@@ -5,12 +5,22 @@
       <p class="font-light text-lg">{{ .Site.Params.introSubtitle }}</p>
       
       <div id="container">
+        
         <button class="learn-more">
           <span class="circle" aria-hidden="true">
             <span class="icon arrow"></span>
           </span>
           <span class="button-text">About Me</span>
         </button>
+        
+        
+        <button class="learn-more">
+          <span class="circle" aria-hidden="true">
+            <span class="icon arrow"></span>
+          </span>
+          <span class="button-text">My CV</span>
+        </button>
+        
       </div>
       
     </div>
