--- a/themes/blist-hugo-theme/layouts/partials/intro.html
+++ b/themes/blist-hugo-theme/layouts/partials/intro.html
@@ -6,7 +6,7 @@
       
       <div id="container">
         
-        <button class="learn-more">
+        <button class="learn-more" style="margin-right:10px;">
           <span class="circle" aria-hidden="true">
             <span class="icon arrow"></span>
           </span>
