--- a/themes/blist-hugo-theme/layouts/partials/intro.html
+++ b/themes/blist-hugo-theme/layouts/partials/intro.html
@@ -6,8 +6,8 @@
       
       <div id="container">
         
-        <button class="learn-more" style="margin-right:10px;">
-          <span class="circle" aria-hidden="true">
+        <button class="learn-more" style="margin-right:20px;">
+          <span class="circle" aria-hidden="true" style="background: #000;">
             <span class="icon arrow"></span>
           </span>
           <span class="button-text">About Me</span>
