Add LinkedIn Button

--- a/themes/blist-hugo-theme/layouts/partials/experience.html
+++ b/themes/blist-hugo-theme/layouts/partials/experience.html
@@ -11,6 +11,13 @@
                         <div class="education font-light text-lg">
 Having recently graduated with a First Class BSc in Mathematics, from Lancaster University, I am currently studying for a MSc in Statistics. I look forward to completing my masters course later this year and entering the world of employment. To see my previous work experience and extra curricular projects, check out my LinkedIn Profile.
                         </div>
+                        
+                        <button class="learn-more">
+                          <span class="circle" aria-hidden="true">
+                            <span class="icon arrow"></span>
+                          </span>
+                          <span class="button-text">LinkedIn</span>
+                        </button>
                 </div>
             </div>
         </div>
