--- a/themes/blist-hugo-theme/layouts/partials/intro.html
+++ b/themes/blist-hugo-theme/layouts/partials/intro.html
@@ -10,7 +10,7 @@
           <span class="circle" aria-hidden="true" style="background: #000;">
             <span class="icon arrow"></span>
           </span>
-          <span class="button-text">About Me</span>
+          <span class="button-text" style="color: #000;">About Me</span>
         </button>
         
         
