--- a/themes/blist-hugo-theme/assets/css/site.css
+++ b/themes/blist-hugo-theme/assets/css/site.css
@@ -419,6 +419,21 @@ body {
 	 text-align: center;
 	 text-transform: uppercase;
 }
+ button.learn-more .button-text_a {
+	 transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+	 position: absolute;
+	 top: 0;
+	 left: 0;
+	 right: 0;
+	 bottom: 0;
+	 padding: 0.75rem 0;
+	 margin: 0 0 0 1.85rem;
+	 color: #000;
+	 font-weight: 700;
+	 line-height: 1.6;
+	 text-align: center;
+	 text-transform: uppercase;
+}
  button:hover .circle {
 	 width: 100%;
 }
@@ -427,6 +442,9 @@ body {
 	 transform: translate(1rem, 0);
 }
  button:hover .button-text {
+	 color: #fff;
+}
+button:hover .button-text_a {
 	 color: #fff;
 }
  @supports (display: grid) {
