--- a/themes/blist-hugo-theme/layouts/partials/experience.html
+++ b/themes/blist-hugo-theme/layouts/partials/experience.html
@@ -16,7 +16,7 @@ Having recently graduated with a First Class BSc in Mathematics, from Lancaster 
                           <span class="circle" aria-hidden="true">
                             <span class="icon arrow"></span>
                           </span>
-                          <a href="https://www.linkedin.com/in/ethan-webb10"></a><span class="button-text">LinkedIn</span></a>
+                          <a href="https://www.linkedin.com/in/ethan-webb10"><span class="button-text">LinkedIn</span></a>
                         </button>
                 </div>
             </div>
