--- a/themes/blist-hugo-theme/layouts/partials/intro.html
+++ b/themes/blist-hugo-theme/layouts/partials/intro.html
@@ -10,7 +10,7 @@
           <span class="circle" aria-hidden="true" style="background: #000;">
             <span class="icon arrow"></span>
           </span>
-          <span class="button-text_a">About Me</span>
+          <a href="https://www.mrethanwebb.com/page/about/"><span class="button-text_a">About Me</span></a>
         </button>
         
         
