--- a/themes/blist-hugo-theme/layouts/partials/intro.html
+++ b/themes/blist-hugo-theme/layouts/partials/intro.html
@@ -13,12 +13,11 @@
           <a href="https://www.mrethanwebb.com/page/about/"><span class="button-text_a">About Me</span></a>
         </button>
         
-        
         <button class="learn-more">
           <span class="circle" aria-hidden="true">
             <span class="icon arrow"></span>
           </span>
-          <span class="button-text">My CV</span>
+          <a href="./partials/Ethan_Webb_CV.pdf" download><span class="button-text">My CV</span></a>
         </button>
         
       </div>
