--- a/themes/blist-hugo-theme/layouts/partials/intro.html
+++ b/themes/blist-hugo-theme/layouts/partials/intro.html
@@ -17,7 +17,7 @@
           <span class="circle" aria-hidden="true">
             <span class="icon arrow"></span>
           </span>
-          <a href="./partials/Ethan_Webb_CV.pdf" download><span class="button-text">My CV</span></a>
+          <a href="./Ethan_Webb_CV.pdf" download><span class="button-text">My CV</span></a>
         </button>
         
       </div>
