Add Margin To Button; Remove Broken CV Download

--- a/themes/blist-hugo-theme/assets/css/site.css
+++ b/themes/blist-hugo-theme/assets/css/site.css
@@ -363,6 +363,7 @@ body {
 	 padding: 0;
 	 font-size: inherit;
 	 font-family: inherit;
+	 margin-top: 20px;
 }
  button.learn-more {
 	 width: 12rem;
