Add photo to experience section

--- a/themes/blist-hugo-theme/layouts/partials/experience.html
+++ b/themes/blist-hugo-theme/layouts/partials/experience.html
@@ -21,6 +21,8 @@ Having recently graduated with a First Class BSc in Mathematics, from Lancaster 
                         </button>
                         </div>
                         
+                        <img class="rounded-lg shadow-sm" src="{{ .Site.Params.expPhoto }}" alt="Ethan at Lancaster" />
+                        
                     </div>
             </div>
         </div>
