--- a/themes/blist-hugo-theme/layouts/partials/education.html
+++ b/themes/blist-hugo-theme/layouts/partials/education.html
@@ -5,7 +5,7 @@
             <div class="col-12">
                 <h2 class="text-4xl font-bold mb-4">Education</h2>
                   
-                     <div class="gird_container"> 
+                     <div class="container max-w-screen-lg mx-auto px-6 grid md:grid-cols-2 gap-4 lg:gap-16 items-center"> 
 
                         <div class="education">
                             <div class="education__date">2018-Present</div>
