--- a/themes/blist-hugo-theme/layouts/partials/experience.html
+++ b/themes/blist-hugo-theme/layouts/partials/experience.html
@@ -6,7 +6,7 @@
             <div class="col-12">
                 <h2 class="text-4xl font-bold mb-4">Experience</h2>
                   
-                     <div class="container max-w-screen-lg mx-auto px-6 py-12 grid md:grid-cols-2 gap-4 lg:gap-16 items-center"> 
+                     <div class="container max-w-screen-lg mx-auto px-6 grid md:grid-cols-2 gap-4 lg:gap-16 items-center"> 
 
 
 
