--- a/themes/blist-hugo-theme/layouts/index.html
+++ b/themes/blist-hugo-theme/layouts/index.html
@@ -5,7 +5,11 @@
   
   {{- partial "experience.html" . -}}
   
-  <h2 class="text-4xl font-bold mb-4">Project Portfolio</h2>
+  <div class="row rad-fade-down">
+    <div class="col-12">
+      <h2 class="text-4xl font-bold mb-4">Project Portfolio</h2>
+    </div>
+  </div>  
   
   <div class="container p-6 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 lg:gap-8">
     {{ range first 6 (where .Site.RegularPages.ByDate.Reverse "Type" "project")  }}
