--- a/themes/blist-hugo-theme/assets/css/site.css
+++ b/themes/blist-hugo-theme/assets/css/site.css
@@ -465,20 +465,16 @@ button:hover .button-text_a {
 
 /* Progress Bar CSS */
 
-*
-{
-  margin:0;
-  padding:0;
-  font-family:'Roboto',sans-serif;
-}
-body
+
+/* body
 {
   background:#03a9f4;
   align-items:center;
   justify-content:center;
   min-height:100vh;
   display:flex;
-}
+}*/
+
 .box
 {
   background:#fff;
