--- a/themes/blist-hugo-theme/layouts/partials/experience.html
+++ b/themes/blist-hugo-theme/layouts/partials/experience.html
@@ -11,7 +11,7 @@
 
 
                         <div class="education font-light text-lg">
-Having recently graduated with a First Class BSc in Mathematics, from Lancaster University, I am currently studying for a MSc in Statistics. I look forward to completing my masters course later this year and entering the world of employment. To see my previous work experience and extra curricular projects, check out my LinkedIn Profile.
+Having recently graduated with a First Class BSc in Mathematics, from Lancaster University, I am currently studying for an MSc in Statistics. I look forward to completing my masters course later this year and entering the world of employment. To see my previous work experience and extra curricular projects, check out my LinkedIn Profile.
                         
                         <button class="learn-more" style="margin-top:20px;">
                           <span class="circle" aria-hidden="true">
