Sort Out Reading Page

--- a/themes/blist-hugo-theme/layouts/_default/reading.html
+++ b/themes/blist-hugo-theme/layouts/_default/reading.html
@@ -1,4 +1,12 @@
-{{- partial "reading_intro.html" . -}}
+
+  {{- partial "head.html" . -}}
+  
+  {{- partial "header.html" . -}}
+
+  {{- partial "reading_intro.html" . -}}
   
 
-{{- partial "social.html" . -}}
+  {{- partial "social.html" . -}}
+  
+  {{- partial "footer.html" . -}}
+
