Reading page works - now edit

--- a/themes/blist-hugo-theme/layouts/_default/reading.html
+++ b/themes/blist-hugo-theme/layouts/_default/reading.html
@@ -1,4 +1,4 @@
-
+{{ define "reading" }}
   {{- partial "head.html" . -}}
   
   {{- partial "header.html" . -}}
@@ -8,5 +8,4 @@
 
   {{- partial "social.html" . -}}
   
-  {{- partial "footer.html" . -}}
-
+{{ end }}
