--- a/themes/blist-hugo-theme/layouts/partials/reading_intro.html
+++ b/themes/blist-hugo-theme/layouts/partials/reading_intro.html
@@ -1,5 +1,3 @@
-
-
 <section class="section section--border-bottom rad-animation-group">
     <div class="container max-w-screen-lg mx-auto px-6 grid">
         <div class="row rad-fade-down">
@@ -11,7 +9,7 @@
 
 
                         <div class="education font-light text-lg">
-Due to having family in the vulnerable category, I was unable to join the key workers during the pandemic. As a result, I decided to start a new habit of reading. Since then, I have learnt a huge amound about business, psychology and the world around me. Reading has been a great way to challenge my preconceptions and the mental models my brain has built of the world. It has also been a goos outlet for learning from the mistakes of others. In 2022, my goals is to read <b>52 Books</b> - I have am currently <b>on book number 4</b>. 
+Due to having family in the vulnerable category, I was unable to join the key workers during the pandemic. As a result, I decided to start a new habit of reading. Since then, I have learnt a huge amound about business, psychology and the world around me. Reading has been a great way to challenge my preconceptions and the mental models my brain has built of the world. It has also been a goos outlet for learning from the mistakes of others. In 2022, my goals is to read 52 Books - I have am currently on book number 4. 
                         </div>
                         
 <!-- Progress Bar -->
