--- a/themes/blist-hugo-theme/layouts/partials/reading_intro.html
+++ b/themes/blist-hugo-theme/layouts/partials/reading_intro.html
@@ -1,3 +1,5 @@
+<main class="flex-1">
+
 <section class="section section--border-bottom rad-animation-group">
     <div class="container max-w-screen-lg mx-auto px-6 grid">
         <div class="row rad-fade-down">
@@ -32,4 +34,4 @@ Due to having family in the vulnerable category, I was unable to join the key wo
     </div>
 </section>
 
-
+</main>
