--- a/themes/blist-hugo-theme/layouts/partials/reading_intro.html
+++ b/themes/blist-hugo-theme/layouts/partials/reading_intro.html
@@ -11,7 +11,7 @@
 
 
                         <div class="education font-light text-lg">
-Due to having family in the vulnerable category, I was unable to join the key workers during the pandemic. As a result, I decided to start a new habit of reading. Since then, I have learnt a huge amound about business, psychology and the world around me. Reading has been a great way to challenge my preconceptions and the mental models my brain has built of the world. It has also been a goos outlet for learning from the mistakes of others. In 2022, my goals is to read 52 Books - I have am currently on book number 4. 
+In 2020, I started to make reading a habit. Due to having family in the vulnerable category, I was unable to join the key workers during the pandemic. As a result, I decided to start a new habit of reading. Since then, I have learnt a huge amount about business, psychology and the world around me. Reading has been a great way to challenge my preconceptions, and challenge the mental models my brain has built of the world. It has also been a good outlet for learning from the mistakes of others. In 2022, my goals is to read 52 Books - I am currently on book number 4. 
                         </div>
                         
 <!-- Progress Bar -->
@@ -25,7 +25,7 @@ Due to having family in the vulnerable category, I was unable to join the key wo
       <h2>5<span>%</span></h2>
     </div>
   </div>
-  <h2 class="text">Progress</h2>
+  <h2 class="text">2022 Reading Challenge</h2>
 </div>
                         
                     </div>
