--- a/themes/blist-hugo-theme/layouts/partials/reading_intro.html
+++ b/themes/blist-hugo-theme/layouts/partials/reading_intro.html
@@ -11,7 +11,7 @@
 
 
                         <div class="education font-light text-lg">
-In 2020, I started to make reading a habit. Due to having family in the vulnerable category, I was unable to join the key workers during the pandemic. As a result, I decided to start a new habit of reading. Since then, I have learnt a huge amount about business, psychology and the world around me. Reading has been a great way to challenge my preconceptions, and challenge the mental models my brain has built of the world. It has also been a good outlet for learning from the mistakes of others. In 2022, my goals is to read 52 Books - I am currently on book number 4. If you want a book recommendation, feel free to reach out to me on LinkedIn! 
+In 2020, I started to make reading a habit. Due to having family in the vulnerable category, I was unable to join the key workers during the pandemic. As a result, I decided to start a new habit of reading. Since then, I have learnt a huge amount about business, psychology and the world around me. Reading has been a great way to challenge my preconceptions, and challenge the mental models my brain has built of the world. It has also been a good outlet for learning from the mistakes of others. In 2022, my goal is to read 52 Books - I am currently on book number 5. If you want a book recommendation, feel free to reach out to me on LinkedIn! 
                         </div>
                         
 <!-- Progress Bar -->
@@ -22,7 +22,7 @@ In 2020, I started to make reading a habit. Due to having family in the vulnerab
       <circle cx="70" cy="70" r="70"></circle>
     </svg>
     <div class="num">
-      <h2>5<span>%</span></h2>
+      <h2>9<span>%</span></h2>
     </div>
   </div>
   <h2 class="text">2022 Reading Challenge</h2>
